add mapstruct and change logic mapper for Company