@@ -7,77 +7,54 @@ import com.kronadental.kronadental.domain.data.Technik;
 import com.kronadental.kronadental.domain.dto.company.CompanyDTO;
 import com.kronadental.kronadental.domain.dto.company.CreateCompanyDTO;
 import com.kronadental.kronadental.domain.dto.company.UpdateCompanyDTO;
-import org.springframework.stereotype.Component;
+import com.kronadental.kronadental.repository.ManagerRepo;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.mapstruct.MappingTarget;
+import org.mapstruct.Named;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Component
-public class CompanyMapper {
+@Mapper(componentModel = "spring", uses = ManagerRepo.class)
+public interface CompanyMapper {
 
-    public Company create(Company company, CreateCompanyDTO createCompanyDTO, List<Dentist> dentistList, List<Manager> managerList, List<Technik> technikList) {
-        company.setCompanyType(createCompanyDTO.getCompanyType());
-        company.setName(createCompanyDTO.getName());
-        company.setAddress(createCompanyDTO.getAddress());
-        company.setDentistList(dentistList);
-        company.setManagerList(managerList);
-        company.setTechnikList(technikList);
-        return company;
-    }
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "active", constant = "true")
+    @Mapping(target = "managerList", ignore = true)
+    @Mapping(target = "dentistList", ignore = true)
+    @Mapping(target = "technikList", ignore = true)
+    Company create(CreateCompanyDTO createCompanyDTO);
 
-    public Company update(Company company, UpdateCompanyDTO companyDTO, List<Dentist> dentistList, List<Manager> managerList, List<Technik> technikList) {
-        //TODO add for update conditions if null (such us here)
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "managerList", ignore = true)
+    @Mapping(target = "dentistList", ignore = true)
+    @Mapping(target = "technikList", ignore = true)
+    Company update(UpdateCompanyDTO updateCompanyDTO, @MappingTarget Company company);
 
-        if (companyDTO.getActive() != null) company.setActive(companyDTO.getActive());
+    @Mapping(target = "managerIdList", source = "managerList", qualifiedByName = "mapToManagerIdList")
+    @Mapping(target = "dentistIdList", source = "dentistList", qualifiedByName = "mapToDentistIdList")
+    @Mapping(target = "technikIdList", source = "technikList", qualifiedByName = "mapToTechnikIdList")
+    CompanyDTO toDTO(Company company);
 
-        company.setCompanyType(companyDTO.getCompanyType());
-        company.setName(companyDTO.getName());
-        company.setAddress(companyDTO.getAddress());
-        if (!dentistList.isEmpty()) {
-            company.setDentistList(dentistList);
-        }
-        if (!managerList.isEmpty()) {
-            company.setManagerList(managerList);
-        }
-        if (!technikList.isEmpty()) {
-            company.setTechnikList(technikList);
-        }
-        return company;
-    }
-
-    public CompanyDTO toDTO(Company company) {
-        //TODO: add conditions for null lists(not return: managerIdList, dentistIdList, technikIdList)
-        CompanyDTO companyDTO = new CompanyDTO();
-
-        List<Long> managerIdList = company.getManagerList().stream()
+    @Named("mapToManagerIdList")
+    default List<Long> mapToManagerList(List<Manager> managerList) {
+        return managerList.stream()
                 .map(Manager::getId)
                 .collect(Collectors.toList());
-        List<Long> dentistIdList = company.getDentistList().stream()
+    }
+
+    @Named("mapToDentistIdList")
+    default List<Long> mapToDentistIdList(List<Dentist> dentisList) {
+        return dentisList.stream()
                 .map(Dentist::getId)
                 .collect(Collectors.toList());
-        List<Long> technikIdList = company.getTechnikList().stream()
+    }
+
+    @Named("mapToTechnikIdList")
+    default List<Long> mapToTechnikIdList(List<Technik> technikList) {
+        return technikList.stream()
                 .map(Technik::getId)
-                .toList();
-
-        companyDTO.setId(company.getId());
-        companyDTO.setActive(company.getActive());
-        companyDTO.setCompanyType(company.getCompanyType());
-        companyDTO.setName(company.getName());
-        companyDTO.setAddress(company.getAddress());
-        companyDTO.setManagerIdList(managerIdList);
-        companyDTO.setDentistIdList(dentistIdList);
-        companyDTO.setTechnikIdList(technikIdList);
-
-        return companyDTO;
+                .collect(Collectors.toList());
     }
-
-    public List<CompanyDTO> toDTO(List<Company> companyList) {
-        List<CompanyDTO> companyDTOList = new ArrayList<>();
-
-        companyList.forEach(company -> companyDTOList.add(toDTO(company)));
-
-        return companyDTOList;
-    }
-
 }
